--- a/pages/sequencer.html
+++ b/pages/sequencer.html
@@ -55,20 +55,27 @@
   <audio data-instrument="2" src="./js30/1/sounds/kick.wav"></audio>
   <audio data-instrument="3" src="./js30/1/sounds/boom.wav"></audio>
 <style>
-  body {
+  html, body {
+    height: 100%;
     background: RGB(147,147,147);
   }
   
   .border {
-    position: absolute;
-    top: 40%;
-	left: 40%;
+    width: 80%;
+	height: 80%;
+	margin: auto;
+	margin: auto;
     box-shadow: 0px 0px 40px 5px black;
   }
   
+  table {
+    width: 100%;
+	height: 90%;
+  }
+  
   .but {
-	width: 40px;
-	height: 30px;
+	width: 100%;
+	height: 100%;
   }
   
   .but:hover {
